src/objects/External_Affairs__c.object
<CustomObject>
    <fields>
        <fullName>Anticipated_Close_Date__c</fullName>
        <label>Anticipated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Community Affairs</fullName>
                </value>
                <value>
                    <fullName>Government Affairs</fullName>
                </value>
                <value>
                    <fullName>Social Impact</fullName>
                </value>
                <value>
                    <fullName>Corporate Affairs</fullName>
                </value>
                <value>
                    <fullName>2017 Goals</fullName>
                </value>
                <value>
                    <fullName>2018 Goals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Establish BlueWave as a B-Corp                                                                                  End of Q1 2017</fullName>
                </value>
                <value>
                    <fullName>Launch Community Service Program with other teams                                         End of Q1 2017</fullName>
                </value>
                <value>
                    <fullName>Press Event (Ribbon Cutting, interview)                                                                            1 / Quarter</fullName>
                </value>
                <value>
                    <fullName>Press Releases                                                                                                                1/month</fullName>
                </value>
                <value>
                    <fullName>Social Media Posts (Twitter/Instagram/Web)                                                                    8 posts/month</fullName>
                </value>
                <value>
                    <fullName>Increase Twitter/Instagram Followers                                                                       100% (2016: 100 Twitter, 50 Instagram)</fullName>
                </value>
                <value>
                    <fullName>Launch Advisory Board                                                                                                 End of Q1 2017</fullName>
                </value>
                <value>
                    <fullName>Industry Conference/Meeting Attendance                                                               1/month (at least one member of staff)</fullName>
                </value>
                <value>
                    <fullName>Thought Leadership Opportunities                                                                            1 / Quarter (post, blog, op-ed, panel)</fullName>
                </value>
                <value>
                    <fullName>Set annual giving policy based on % of annual profit                                             Q2 2017</fullName>
                </value>
                <value>
                    <fullName>Implement quarterly External Affairs metrics report                                              End of Q1 2017</fullName>
                </value>
                <value>
                    <fullName>Launch External Newsletter                                                                                         Q1 2017</fullName>
                </value>
                <value>
                    <fullName>Government Affairs Engagement                                                                                5 Favorable Outcomes (1/qtr + 1)</fullName>
                </value>
                <value>
                    <fullName>Hire External Affairs Associate                                                                                     End of Q1 2017</fullName>
                </value>
                <value>
                    <fullName>Loan Platform / CSS / Dev Support                                                                              5 Favorable Outcomes (2 Dev/2 LP/1 CSS)</fullName>
                </value>
                <value>
                    <fullName>National Media Coverage                                                                                              2 articles in national publications</fullName>
                </value>
                <value>
                    <fullName>Administrative Responsibilities</fullName>
                </value>
                <value>
                    <fullName>Community Service: Team Events</fullName>
                </value>
                <value>
                    <fullName>Community Service: Company Wide Events</fullName>
                </value>
                <value>
                    <fullName>Community Service: Individual Days</fullName>
                </value>
                <value>
                    <fullName>Acquire BBB Certification and Retain Inc 5000 and BBJ Fast 50 Titles: Q2 2018</fullName>
                </value>
                <value>
                    <fullName>BlueWave Overview: Establish Process/Update Quarterly</fullName>
                </value>
                <value>
                    <fullName>Community Service</fullName>
                </value>
                <value>
                    <fullName>Distribute Quarterly EA Metrics Report</fullName>
                </value>
                <value>
                    <fullName>Expand B-Corp Opportunities and Visibility: 1/Quarter</fullName>
                </value>
                <value>
                    <fullName>Government Affairs Engagements: 24</fullName>
                </value>
                <value>
                    <fullName>Hire Policy Associate to build capacity in all new markets</fullName>
                </value>
                <value>
                    <fullName>Industry/Conference Attendance: 2 employees/month</fullName>
                </value>
                <value>
                    <fullName>National Media Coverage: 8 Articles by end of Q4 2018</fullName>
                </value>
                <value>
                    <fullName>Newsletter: 4/Quarter Internal and 12 monthly External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Affairs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Affairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>